Fix position on Safari

--- a/src/components/_orbit-base.scss
+++ b/src/components/_orbit-base.scss
@@ -1,6 +1,7 @@
 .o-orbit {
   --o-arc: var(--o-a360); // ensure reset to default. useful for nested
   --o-offset-angle: var(--o-a0); // ensure reset to default. useful for nested
+  position: relative;
   display: grid;
   border-radius: 50%;
   grid-area: 1/1/1/1;
